fix: spacing on weapons list to accommodate localization better

--- a/static/styles/twodsix_basic.css
+++ b/static/styles/twodsix_basic.css
@@ -1008,7 +1008,7 @@ a.skill-tab.active, a.item-tab.active, a.finances-tab.active, a.info-tab.active,
 
 .items-weapons {
   display: grid;
-  grid-template-columns: 1.7em 11.5em 1.6em 1.6em 2em 4em 5em 6em;
+  grid-template-columns: 1.5em 11.5em 1.6em 3em 2em 4em 4em 6em;
   gap: 1px 1px;
   grid-template-areas:
     '. . . . . . . .';
